--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "School of Code",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "vitest": "^1.3.1"
+  }
 }
